admission_controllers/webhook-js/manifests/webhook-js-admission.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: webhook-js-admit
  labels:
    name: webhook-js-admit

webhooks:
- name: admit.webhook-js.chuklee.com
  admissionReviewVersions:
  - v1beta1
  - v1
  rules:
  - apiGroups: [ "" ]
    apiVersions: [ "v1" ]
    resources: [ "pods" ]
    operations: [ "CREATE", "UPDATE" ]
    scope: Namespaced 
  clientConfig:
    service:
      name: webhook-js-svc
      namespace: webhook-js
      path: /validate
      port: 8443
    caBundle: abc123
  sideEffects: None

---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: webhook-js-validate
  labels:
    name: webhook-js-validate
webhooks:
- name: mutate.webhook-js.chuklee.com
  admissionReviewVersions:
  - v1beta1
  - v1
  rules:
  - apiGroups: [ "", "apps" ]
    apiVersions: [ "v1" ]
    resources: [ "pods", "deployments", "service" ]
    operations: [ "CREATE" ]
    scope: Namespaced
  clientConfig:
    service:
      name: webhook-js-svc
      namespace: webhook-js
      path: /mutate
      port: 8443
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURFVENDQWZtZ0F3SUJBZ0lVZllzbUQxRld0UFJVTWxqUDl6Mk1jQXljQ0Zzd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0dERVdNQlFHQTFVRUF3d05kMlZpYUc5dmF5MXFjeTFqWVRBZUZ3MHlNakEwTURNd05EVXpNREphRncweQpNekEwTURNd05EVXpNREphTUJneEZqQVVCZ05WQkFNTURYZGxZbWh2YjJzdGFuTXRZMkV3Z2dFaU1BMEdDU3FHClNJYjNEUUVCQVFVQUE0SUJEd0F3Z2dFS0FvSUJBUURJRTZ3SG1yeVRqeFZLODVQdzhqczM1TGZVRHRKOGVOcGgKTlpxUUdEbUl2YjNma1lSVUJReDRMZWJmUHZUZkdON1dGV2xiMjJoeTUzdktiNDZFZ0VSejVvQ05nTW1weVJ2WAoxSnpDVlJXS0R6OG [...]
  sideEffects: None
